--- a/examples/cloud-sql/garden.yml
+++ b/examples/cloud-sql/garden.yml
@@ -1,18 +1,29 @@
 kind: Project
-name: terraform-gke
+name: cloud-sql
+# defaultEnvionment: "remote" # Uncomment if you'd like the remote environment to be the default for this project.
+defaultEnvironment: "remote"
+environments:
+  - name: local
+  - name: remote
 providers:
   - name: terraform
     # These two keys must be set if we want to apply a stack as part of the provider initialization.
     autoApply: true
-    initRoot: "."
+    initRoot: "./cluster"
     # You can either uncomment and replace these with your own values, or provide the values in a
     # terraform.tfvars file in the project root.
     variables:
       # gcp_project_id: garden-gke-tf-${local.username}
       gcp_project_id: garden-gke-tf-eysi-265108
       gcp_region: europe-west1
+  - name: local-kubernetes
+    environments: [local]
   - name: kubernetes
+    environments: [remote]
+    # Replace these values as appropriate
     kubeconfig: ${providers.terraform.outputs.kubeconfig_path}
     context: gke
-    defaultHostname: terraform-gke-${local.username}.dev-2.sys.garden
+    namespace: cloud-sql-${local.env.USER || local.username}
+    defaultHostname: ${local.env.USER || local.username}-cloud-sql.dev-1.sys.garden
     buildMode: cluster-docker
+    setupIngressController: nginx
