--- a/examples/demo-project/frontend/garden.yml
+++ b/examples/demo-project/frontend/garden.yml
@@ -2,8 +2,12 @@ kind: Module
 name: frontend
 description: Frontend service container
 type: container
+hotReload:
+  sync:
+    - target: /app/
 services:
   - name: frontend
+    hotReloadArgs: [npm, run, dev]
     ports:
       - name: http
         containerPort: 8080
@@ -19,8 +23,8 @@ services:
     dependencies:
       - backend
 tests:
-  - name: unit
-    args: [npm, test]
+  # - name: unit
+  #   args: [npm, test]
   - name: integ
     args: [npm, run, integ]
     dependencies:
