docs(examples): fix base-image example (see #1707)

--- a/examples/base-image/backend/garden.yml
+++ b/examples/base-image/backend/garden.yml
@@ -3,12 +3,14 @@ name: backend
 description: Backend service container
 type: container
 dockerfile: "${environment.name == 'prod' ? 'Dockerfile.prod' : 'Dockerfile.dev'}"
+# We need this because of: https://github.com/garden-io/garden/issues/1707
+include: ["*"]
 build:
   dependencies: [base-image]
 # The build arguments to use when building the image.
 # Corresponds to the ARG directive in the Dockerfile.
 buildArgs:
-  BASE_IMAGE_VERSION: ${modules.base-image.version}
+  BASE_IMAGE: ${modules.base-image.outputs.deployment-image-name}:${modules.base-image.version}
 services:
   - name: backend
     ports:
