--- a/examples/demo-project/garden.yml
+++ b/examples/demo-project/garden.yml
@@ -10,7 +10,9 @@ providers:
   - name: kubernetes
     environments: [remote]
     # Replace these values as appropriate
-    context: gke_garden-dev-200012_europe-west1-b_garden-dev-1
+    # context: gke_garden-dev-200012_europe-west1-b_garden-dev-1
+    # context: ge-terraform-preprod2
+    context: azureread-rbac
     namespace: demo-project-testing-${local.env.USER || local.username}
     defaultHostname: ${local.env.USER || local.username}-demo-project.dev-1.sys.garden
     buildMode: kaniko
