--- a/examples/demo-project/garden.yml
+++ b/examples/demo-project/garden.yml
@@ -12,7 +12,7 @@ providers:
     # Replace these values as appropriate
     # context: gke_garden-dev-200012_europe-west1-b_garden-dev-1
     # context: ge-terraform-preprod2
-    context: azureread-rbac
+    context: azuread-rbac
     namespace: demo-project-testing-${local.env.USER || local.username}
     defaultHostname: ${local.env.USER || local.username}-demo-project.dev-1.sys.garden
-    buildMode: kaniko
+    buildMode: cluster-buildkit
